# douban-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/douban_scraper/: __main__.py  cli.py  frodo.py  models.py  ratelimit.py  rexxar.py  state.py
tests/: test_frodo.py  test_hmac.py  test_integration.py  test_models.py  test_ratelimit.py  test_state.py
tests/fixtures/: frodo_book_interests.json  frodo_movie_interests.json  frodo_music_interests.json
